--- a/TributePage.html
+++ b/TributePage.html
@@ -40,7 +40,7 @@
             </div>
             <footer class="">
                 <hr/>
-                <p>Written and coded by <a href="https://www.freecodecamp.cn/lishenjian">Shenjian Lee</a>.</p>
+                <p class="text-center">Written and coded by <a href="https://www.freecodecamp.cn/lishenjian">Shenjian Lee</a>.</p>
             </footer>
         </div>
     </body>
