--- a/freeCode131.html
+++ b/freeCode131.html
@@ -1,4 +1,4 @@
-<!doctype>
+<!doctype html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -9,7 +9,7 @@
         <div class="header_hd">
             <div class="header">
                 <img src="http://qlip.in/images/qlip.png" alt="qlip">
-                <ul>
+                <ul id="focus_a"> 
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="#">PORTFOLIO</a></li>
                     <li><a href="#">CONTACT</a></li>
@@ -26,7 +26,7 @@
                 <img src="img/avatar.jpg">
             </div>
         
-            <div class="container_2">
+            <div class="container_2" id="portfolio">
                 <h2>PORTFOLIO</h2>
                 <p><span></span><span></span></p>
                 <ul>
@@ -38,7 +38,7 @@
                     <li><img src="img/webgatomalo.jpg"></li>
                 </ul>
             </div>
-            <div class="container_3">
+            <div class="container_3" id="contact">
                 <h2>CONTACT ME</h2>
                 <p><span></span><span></span></p>
                 <form class="cont_form">
@@ -67,8 +67,8 @@
                 </div>
             </div>
         </div>
-        <div>
-            
+        <div class="footer">
+            <p>qlip &copy 2017. All Rights Reversed</p>
         </div>
     </body>
 </html>
