番茄计时器：更添加倒计时背景色覆盖功能

--- a/PomodoroClock/index.html
+++ b/PomodoroClock/index.html
@@ -22,7 +22,7 @@
                     <button class="btClick" type="button">+</button>
                 </div>
             </div>
-            <div class="count">
+            <div class="count" id="countId">
                 <p id="showTxt">Session</p>
                 <p id="showTime">25</p>
                 <span id="boxBgColor"></span>
